[package]
name = "dpk-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.24.0"
rand = "0.8.5"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
tui = "0.18.0"
